# jf-ripper

./: .dockerignore  Cargo.toml  Dockerfile  TODO.md
src/: bluray.rs  cli.rs  config.rs  disc.rs  main.rs  tmdb.rs
src/distributed/: fs_ops.rs  job.rs  manager.rs  mod.rs  reader.rs  worker.rs
src/dvd/: ffi.rs  ifo.rs  mod.rs
src/rip/: analysis.rs  dvd_analysis.rs  jellyfin.rs  mod.rs  tui.rs
src/transcode/: audio.rs  config.rs  error.rs  mod.rs  pipeline.rs  video.rs
